--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+body {
+  font-family: "Nunito Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
 @theme {
   --color-uplife-primary: #0ea5e9;
   --color-neutral-background: #fafafa;
